// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page-components/TikTakBoom/PlayersSetup renders correctly 1`] = `
<div
  className="playersSetupContainer"
>
  <div
    className="playersSetupTitle"
  >
    Player Setup
  </div>
  <div
    className="playersContainer"
  >
    <div>
      1_Name 1_true
    </div>
    <div>
      2_Name 2_true
    </div>
    <div>
      3_Name 3_true
    </div>
  </div>
  <button
    className="addPlayerButton"
    onClick={[Function]}
  >
    Add Player
  </button>
  <button
    className="playersSetupSubmitButton"
    onClick={[Function]}
  >
    CONTINUE
  </button>
</div>
`;

exports[`page-components/TikTakBoom/PlayersSetup renders correctly 2`] = `
<div
  className="playersSetupContainer"
>
  <div
    className="playersSetupTitle"
  >
    Player Setup
  </div>
  <div
    className="playersContainer"
  >
    <div>
      1_Name 1_true
    </div>
    <div>
      2__true
    </div>
    <div>
      3_Name 3_true
    </div>
  </div>
  <button
    className="addPlayerButton"
    onClick={[Function]}
  >
    Add Player
  </button>
  <button
    className="playersSetupSubmitButton"
    onClick={[Function]}
  >
    CONTINUE
  </button>
</div>
`;
